syntax = "proto3";

package blog;

import "google/api/annotations.proto";

option go_package = "blogpb";

message Blog {
	string id = 1;
	string author_id = 2;
	string title = 3;
	string content = 4;
}

message CreateBlogRequest {
	Blog blog = 1;
}

message CreateBlogResponse {
	Blog blog = 1;
}

message ReadBlogRequest {
	string blog_id = 1;
}

message ReadBlogResponse {
	Blog blog = 1;
}

message UpdateBlogRequest {
	Blog blog = 1;
}

message UpdateBlogResponse {
	Blog blog = 1;
}

message DeleteBlogRequest {
	string blog_id = 1;
}

message DeleteBlogResponse {
	string blog_id = 1;
}

service BlogService {
	rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse) {
		option (google.api.http) = {
			post: "/api/v1/blog",
			body: "*"
		};
	};
	rpc ReadBlog (ReadBlogRequest) returns (ReadBlogResponse) {
		option (google.api.http) = {
			get: "/api/v1/blog",
		};
	};
	rpc UpdateBlog (UpdateBlogRequest) returns (UpdateBlogResponse) {
		option (google.api.http) = {
			put: "/api/v1/blog",
			body: "*"
		};
	};
	rpc DeleteBlog (DeleteBlogRequest) returns (DeleteBlogResponse) {
		option (google.api.http) = {
			delete: "/api/v1/blog",
		};
	};
}